Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-240

Stepping out of method while debugging stops program

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 1.3.0
    • Qt Creator 1.3.0 rc1
    • Debugger
    • None
    • 5acac101a6cdbc9a304fe9eaf9a2eeb42d3a6201

    Description

      Steps to reproduce the behaviour using attached project:

      • Set breakpoint in main.cpp line 7
      • Run program in debug mode
      • Press F11 to walk into method call
      • Press Shift-F11 to leave method call

      The debugger does not end up in main method but the program is stopped.

      I am working with the following environment:

      • Windows XP Professional Version 2002 SP 3
      • Visual Studio 2003 Version 7.1.6030
      • Microsoft Debugging Tools for Windows Version 6.11.1.404
      • Qt Creator 1.3.0 Beta (alias 1.2.92)
      • Qt 4.5.2 LGPL (self compiled)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            basedow Keno Basedow
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes