Cdb: Fix step out.

Use debugger's 'gu' command instead of temporary breakpoint as a
workaround until it is properly supported by the
SetExecutionStatus() API.

Reviewed-by: hjk
Task-number: QTCREATORBUG-240
(cherry picked from commit 5acac101a6cdbc9a304fe9eaf9a2eeb42d3a6201)